# skycastle

./: README.md  pyproject.toml  solution.txt  test_output.txt
skycastle/: __main__.py  gamestate.py  save_manager.py  ui.py
skycastle/game_commands/: interaction.py  main_handler.py  navigation.py  puzzles.py  system.py
src/skycastle/: __main__.py  ui.py
