[tool.poetry]
name = "skycastle"
version = "0.1.0"
description = "A command-line text adventure where a young boy explores a fantastical, cloud-borne castle to find his lost father."
authors = ["mindfilleter"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/mindfilleter/skycastle"
repository = "https://github.com/mindfilleter/skycastle"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skycastle = "skycastle.cli:main"